src/objects/optrigold__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>CloseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OppId__c</fullName>
        <description>trigger.old.id</description>
        <label>OppId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>StageName__c</fullName>
        <label>StageName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>optrigold</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>optrigold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>optrigolds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>